# dukkys-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
src/: commands.rs  main.rs
src/commands/: help.rs  request.rs
src/util/: channel.rs  role.rs
