[package]
name = "dukkys-bot-rs"
version = "0.0.1"
authors = ["Kenny Root <kenny@the-b.org>"]
edition = "2018"

[[bin]]
name = "dukkys-bot-rs"
path = "src/main.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1

[dependencies.serenity]
default-features = false
features = ["client", "framework", "standard_framework", "gateway", "rustls_backend", "model", "cache"]
version = "0.11.5"

[dependencies.tokio]
version = "1.16.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies]
chrono = "0.4"
dotenv = "0.15"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
